[tool.poetry]
name = "repl_python3_ChillyPlaceBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.0"
jishaku = "^1.20.0"
natural = "^0.2.0"
asyncdagpi = "^3.3.3"
discord-ext-menus = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
