[tool.poetry]
name = "repl_python3_ChillyPlaceBot"
version = "0.1.0"
description = ""
authors = ["DenzvenIgnatius <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
jishaku = "^1.20.0"
youtube-dl = "^2021.5.16"
async-timeout = "^3.0.1"
discord = "^1.0.1"
PyNaCl = "^1.4.0"
discord-components = "^0.5.2"
ButtonPaginator = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
